レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@ li {
 
 /* 検索ボックス */
 dl.searchbox{
-  margin-left: 1150px;
+  margin-left: 85%;
   width: 200px;
   position:relative;
   background-color:#fff;
@@ -88,7 +88,7 @@ dl.searchbox dd{
 
 .header-items {
   margin-top: 13px;
-  padding-left: 1150px;
+  padding-left: 85%;
 }
 
 .navbar-toggler {
