--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,10 +1,23 @@
 <div id="box">
   <div id="images">
-    <div class="image1"></div>
-    <div class="image2"></div>
-    <div class="image3"></div>
-    <div class="image4"></div>
-    <div class="image5"></div>
-    <div class="image6"></div>
+    <div class="image1"><p>RoughWriter</p></div>
+    <div class="image2"><p>RoughWriter</p></div>
+    <div class="image3"><p>RoughWriter</p></div>
+    <div class="image4"><p>RoughWriter</p></div>
+    <div class="image5"><p>RoughWriter</p></div>
+    <div class="image6"><p>RoughWriter</p></div>
+  </div>
+</div>
+<div class="card w-50 mx-auto my-4 shadow-lg">
+  <div class="card-body2">
+      <p class="top-text">
+        RoughWriter(ラフライター）は、ユーザー全員がライターになり個人的<br>
+        <br>
+        ニュースから社会に対してのニュース、言いたいけど恥ずかしくて周り<br>
+        <br>
+        には言えない等の様々なニュースを投稿するSNSです。各々が持っている<br>
+        <br>
+        ニュースを発信して世界を明るくしましょう。<br>
+      </p>
   </div>
 </div>
