--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -38,7 +38,7 @@
               </div>
 
               <div class="actions text-center my-5">
-                <%= f.submit "Sign up" %>
+                <%= f.submit "Sign up", class: "btn btn-outline-secondary", style: "background-color: #0066FF; color: #FFFFFF" %>
               </div>
             <% end %>
 
