--- a/app/views/user/chats/create.js.erb
+++ b/app/views/user/chats/create.js.erb
@@ -1,4 +1,4 @@
-$('table').append(`<tr class="row justify-content-center message">
+$('table').append(`<tr class="row justify-content-center message mb-4">
             <td class="col-2">
               <%= link_to attachment_image_tag(@chat.user, :profile_image, fallback: "no_image.jpg", size:'80x80', class:"profile-image align-top rounded-circle"), user_path(@chat.user) %>
             </td>
@@ -8,6 +8,9 @@ $('table').append(`<tr class="row justify-content-center message">
               <!-- 自分用の吹き出しCSSクラスを適用する -->
               <div class="says">
                 <p style='text-align: left;'><%= @chat.message %></p>
+                <div class="times text-right text-secondary">
+                  <%= @chat.created_at.to_s(:datetime_jp) %>
+                </div>
               </div>
             </td>
           </tr>`);
