--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
+      <%= render 'layouts/error_messages', validation: @post %>
       <div class="card w-100 mx-auto mt-4 mb-4 shadow-lg">
         <div class="card-body">
           <h3 class="user-edit text-secondary text-center my-4">投稿編集</h3>
