--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -10,7 +10,7 @@
 </div>
 <div class="card w-50 mx-auto my-4 shadow-lg">
   <div class="card-body2">
-      <p class="top-text">
+      <p class="top-text mt-5">
         RoughWriter(ラフライター）は、ユーザー全員がライターになり個人的<br>
         <br>
         ニュースから社会に対してのニュース、言いたいけど恥ずかしくて周り<br>
@@ -19,5 +19,9 @@
         <br>
         ニュースを発信して世界を明るくしましょう。<br>
       </p>
+      <div class="col-6 offset-3 mb-5">
+        <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-secondary btn-block" %>
+        <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-secondary btn-block" %>
+      </div>
   </div>
 </div>
