--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
           <li class="header-items"><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete, class:"nav-link text-muted fas fa-sign-out-alt" %></li>
         <% else %>
         <!--ログイン前のヘッダー-->
-          <li class="header-items"><%= link_to ' 投稿一覧', posts_path, class: "nav-link text-muted fas fa-file-alt" %></li>
+          <li class="header-items"><%= link_to ' 投稿一覧', posts_path, class: "nav-link text-light fas fa-file-alt" %></li>
           <li class="header-items"><%= link_to ' 新規登録', new_user_registration_path, class: "nav-link text-light fas fa-user-plus" %></li>
           <li class="header-items"><%= link_to ' ログイン', new_user_session_path, class: "nav-link text-light fas fa-sign-in-alt" %></li>
         <% end %>
