--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-xs-offset-1">
+    <div class="col-md-6 offset-3">
       <!--のちにエラーメッセージ作る-->
       <!--%= render 'layouts/error_messages', validation: @genre %>-->
 
-      <h2>ジャンル一覧・追加</h2>
+      <h3 class="text-secondary mt-3 text-center">ジャンル一覧・追加</h3>
       <!--ジャンルの追加画面-->
       <%= form_with model: [:admin,@genre], local:true do |f| %>
         <div class="form-group my-4">
