--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,8 +21,8 @@
           <li class="header-items"><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "nav-link text-muted fas fa-sign-out-alt" %></li>
         <% elsif admin_signed_in? %>
         <!--adminのヘッダー-->
-          <li class="header-items"><%= link_to ' 投稿一覧', admin_posts_path,class: "nav-link text-muted fas fa-users" %></li>
-          <li class="header-items"><%= link_to ' ユーザー一覧', admin_users_path, class: "nav-link text-muted fas fa-list-alt" %></li>
+          <li class="header-items"><%= link_to ' 投稿一覧', admin_posts_path,class: "nav-link text-muted fas fa-clone" %></li>
+          <li class="header-items"><%= link_to ' ユーザー一覧', admin_users_path, class: "nav-link text-muted fas fa-users" %></li>
           <li class="header-items"><%= link_to ' ジャンル一覧', admin_genres_path, class: "nav-link text-muted fas fa-tags" %></li>
           <li class="header-items"><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete, class:"nav-link text-muted fas fa-sign-out-alt" %></li>
         <% else %>
