--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |color, message| %>
-  <div class="alert alert-<%= color %>" role="alert"><%= message %>
+  <div class="alert alert-<%= color %> text-success" role="alert"><%= message %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
