--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <!--フラッシュメッセージ-->
     <%= render '/layouts/flash' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
