--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -1,4 +1,5 @@
 <% posts.each do |post| %>
+<!--低評価が１０以上のものは表示させない-->
   <% if post.bads.count < 10 %>
     <div class="card w-50 mx-auto mt-4 shadow-lg">
       <div class="card-body">
