--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,3 +1,4 @@
+<!--エラーメッセージ-->
 <% if validation.errors.any? %>
   <div id="error_explanation", class="alert alert-danger", role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
