詳細の訂正

--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="text-center ml-5 mb-2">
       <%= link_to post_path(post) do %>
-        <%= attachment_image_tag post, :image, size: "600x400",class:"post_image_media" %>
+        <%= attachment_image_tag post, :image, size: "600",class:"post_image_media" %>
       <% end %>
       </div>
         <div class="row mb-3">
