--- a/app/views/user/posts/_index_user.html.erb
+++ b/app/views/user/posts/_index_user.html.erb
@@ -41,7 +41,7 @@
     </div>
     <div class="text-center mb-4">
     <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "600x400",class: "post_image_media" %>
+      <%= attachment_image_tag post, :image, size: "600",class: "post_image_media" %>
     <% end %>
     </div>
   </div>
