--- a/app/views/user/users/goods.html.erb
+++ b/app/views/user/users/goods.html.erb
@@ -1,5 +1,6 @@
 <h5 class="text-count mt-4">高評価した投稿</h5>
 <% @good_posts.each do |post| %>
+<% if post.bads.count < 10 %>
   <div class="card w-75 mx-auto mt-4 shadow-lg">
     <div class="card-body">
       <div class="row">
@@ -52,4 +53,6 @@
     <% end %>
     </div>
   </div>
+  <% else %>
+  <% end %>
 <% end %>
