--- a/app/views/user/posts/_index_user.html.erb
+++ b/app/views/user/posts/_index_user.html.erb
@@ -1,51 +1,52 @@
 <h5 class="text-count"><%= posts.count %>件の投稿</h5>
 <% posts.each do |post| %>
-<% if post.bads.count < 10 %>
-  <div class="card w-75 mx-auto mt-4 shadow-lg">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-          <%= link_to user_path(post.user_id) do %>
-        <div class="text-center">
-          <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "70x70" %><br>
+<!--低評価が１０以上だと表示させない-->
+  <% if post.bads.count < 10 %>
+    <div class="card w-75 mx-auto mt-4 shadow-lg">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-2">
+            <%= link_to user_path(post.user_id) do %>
+          <div class="text-center">
+            <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "70x70" %><br>
 
-          <%= post.user.name %>
-        </div>
-        <% end %>
-        </div>
-        <div class="col-10">
-          <p class="card-text text-secondary">ジャンル：<%= post.genre.genre_name %></p>
-          <p class="card-title">
-            <%= link_to(post_path(post.id), class:"text-dark") do %>
-            <strong><%= post.title %></strong>
-            <% end %>
-          </p>
-          <div class="row">
-            <div class="col-1">
-              <div id="index_good_<%= post.id %>">
-                <%= render 'user/goods/good', post: post %>
-              </div>
-            </div>
-            <div class="col-1">
-              <div id="index_bad_<%= post.id %>">
-                <%= render 'user/bads/bad', post: post %>
-              </div>
-            </div>
-            <div class="col-4 offset-4">
+            <%= post.user.name %>
+          </div>
+          <% end %>
+          </div>
+          <div class="col-10">
+            <p class="card-text text-secondary">ジャンル：<%= post.genre.genre_name %></p>
+            <p class="card-title">
               <%= link_to(post_path(post.id), class:"text-dark") do %>
-                <%= post.comments.count %>件のコメント
+              <strong><%= post.title %></strong>
               <% end %>
+            </p>
+            <div class="row">
+              <div class="col-1">
+                <div id="index_good_<%= post.id %>">
+                  <%= render 'user/goods/good', post: post %>
+                </div>
+              </div>
+              <div class="col-1">
+                <div id="index_bad_<%= post.id %>">
+                  <%= render 'user/bads/bad', post: post %>
+                </div>
+              </div>
+              <div class="col-4 offset-4">
+                <%= link_to(post_path(post.id), class:"text-dark") do %>
+                  <%= post.comments.count %>件のコメント
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="text-center mb-4">
+      <%= link_to post_path(post) do %>
+        <%= attachment_image_tag post, :image, size: "600",class: "post_image_media" %>
+      <% end %>
+      </div>
     </div>
-    <div class="text-center mb-4">
-    <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "600",class: "post_image_media" %>
-    <% end %>
-    </div>
-  </div>
   <% else %>
   <% end %>
 <% end %>
