--- a/app/views/user/users/goods.html.erb
+++ b/app/views/user/users/goods.html.erb
@@ -1,58 +1,59 @@
 <h5 class="text-count mt-4">高評価した投稿</h5>
 <% @good_posts.each do |post| %>
-<% if post.bads.count < 10 %>
-  <div class="card w-75 mx-auto mt-4 shadow-lg">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-        <%= link_to user_path(post.user_id) do %>
-        <div class="text-center">
-          <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "70x70" %><br>
+<!--低評価が１０以上だと表示させない-->
+  <% if post.bads.count < 10 %>
+    <div class="card w-75 mx-auto mt-4 shadow-lg">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-2">
+          <%= link_to user_path(post.user_id) do %>
+          <div class="text-center">
+            <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "70x70" %><br>
 
-          <%= post.user.name %>
-        </div>
-        <% end %>
-        </div>
-        <div class="col-10">
-          <p class="card-genre text-secondary">
-            ジャンル ： <%= post.genre.genre_name %>
-          </p>
-          <p class="card-title mb-3">
-            <%= link_to(post_path(post.id), class:"text-dark") do %>
-            <strong><%= post.title %></strong>
-            <% end %>
-          </p>
-          <div class="row">
-            <div class="col-1">
-              <div id="index_good_<%= post.id %>">
-                <%= render 'user/goods/good', post: post %>
-              </div>
-            </div>
-            <div class="col-1">
-              <div id="index_bad_<%= post.id %>">
-                <%= render 'user/bads/bad', post: post %>
-              </div>
-            </div>
-            <div class="col-4">
-              <%= link_to(post_path(post.id), class:"text-dark ml-5") do %>
-                <%= post.comments.count %>件のコメント
-              <% end %>
-            </div>
-            <div class="col-4">
+            <%= post.user.name %>
+          </div>
+          <% end %>
+          </div>
+          <div class="col-10">
+            <p class="card-genre text-secondary">
+              ジャンル ： <%= post.genre.genre_name %>
+            </p>
+            <p class="card-title mb-3">
               <%= link_to(post_path(post.id), class:"text-dark") do %>
-                <%= post.created_at.to_s(:datetime_jp) %>
+              <strong><%= post.title %></strong>
               <% end %>
+            </p>
+            <div class="row">
+              <div class="col-1">
+                <div id="index_good_<%= post.id %>">
+                  <%= render 'user/goods/good', post: post %>
+                </div>
+              </div>
+              <div class="col-1">
+                <div id="index_bad_<%= post.id %>">
+                  <%= render 'user/bads/bad', post: post %>
+                </div>
+              </div>
+              <div class="col-4">
+                <%= link_to(post_path(post.id), class:"text-dark ml-5") do %>
+                  <%= post.comments.count %>件のコメント
+                <% end %>
+              </div>
+              <div class="col-4">
+                <%= link_to(post_path(post.id), class:"text-dark") do %>
+                  <%= post.created_at.to_s(:datetime_jp) %>
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="text-center mb-4">
+      <%= link_to post_path(post) do %>
+        <%= attachment_image_tag post, :image, size: "600x400",class: "post_image_media" %>
+      <% end %>
+      </div>
     </div>
-    <div class="text-center mb-4">
-    <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "600x400",class: "post_image_media" %>
-    <% end %>
-    </div>
-  </div>
-  <% else %>
+    <% else %>
   <% end %>
 <% end %>
