--- a/app/assets/stylesheets/user/users.scss
+++ b/app/assets/stylesheets/user/users.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the user::users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// user/show
+.text-count {
+  margin-left : 200px;
+  color: #666;
+}
+
+// user/edit
+.user-edit {
+  color : #666;
+}
