--- a/app/assets/stylesheets/user/posts.scss
+++ b/app/assets/stylesheets/user/posts.scss
@@ -1,3 +1,19 @@
 strong {
   font-size: 20px;
 }
+
+// post/new
+.new-post {
+  color : #666;
+}
+
+// post/search
+.index_search{
+  margin-left: 400px;
+  margin-bottom: 50px;
+}
+
+.search-text {
+  margin-left: 20px;
+  color: #666;
+}
