--- a/app/views/user/notifications/index.html.erb
+++ b/app/views/user/notifications/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-center text-secondary">通知</h3>
+<h3 class="text-center text-secondary mt-3">通知</h3>
 <div class="container">
   <div class="row">
     <div class="col-6 offset-3">
